@@ -21,6 +21,7 @@
         <!-- Add visibility required by the tests exclusively -->
         <surefire.args>
             -XX:+IgnoreUnrecognizedVMOptions
+            --add-exports=org.mule.service.http/org.mule.service.http.impl.service=ALL-UNNAMED
             --add-exports=org.mule.service.http/org.mule.service.http.impl.functional=ALL-UNNAMED
             --add-exports=org.mule.service.http/org.mule.service.http.impl.functional.client=ALL-UNNAMED
             --add-exports=org.mule.runtime.core/org.mule.runtime.core.internal.config.builders=ALL-UNNAMED
@@ -153,6 +154,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.mule.services</groupId>
+            <artifactId>mule-netty-http-service</artifactId>
+            <type>test-jar</type>
+            <version>${nettyHttpServiceVersion}</version>
+        </dependency>
+        <dependency>
             <groupId>org.mule.tests</groupId>
             <artifactId>mule-tests-unit</artifactId>
             <version>${mule.version}</version> 
@@ -207,11 +214,6 @@
         <dependency>
             <groupId>com.github.valfirst</groupId>
             <artifactId>slf4j-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>nl.jqno.equalsverifier</groupId>
-            <artifactId>equalsverifier</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
